--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "colcade": "^0.2.0",
+    "hellojs": "^1.17.1",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
+    "vue-hellojs": "^0.0.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
