--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,6 +15,6 @@
   ],
   "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#ec6730",
+  "background_color": "#FFFFFF",
   "theme_color": "#ec6730"
 }
