--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-jest": "^23.0.1",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "prerender-spa-plugin": "^3.2.1",
     "vue-cli-plugin-axios": "^0.0.4",
     "vue-cli-plugin-pug": "^1.0.5",
     "vue-template-compiler": "^2.5.16"
