Changement route info perso sur settings

--- a/src/components/user/settings/config.json
+++ b/src/components/user/settings/config.json
@@ -9,7 +9,7 @@
       "title": "Politique de Confidentialité de Hepic"
     },
     {
-      "type": "personal-information",
+      "type": "personal-data",
       "title": "Mes Informations Personnelles",
       "desc": "Informations qu’Hepic possède à propos de vous"
     },
