--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.5.16",
     "vue-hellojs": "^0.0.4",
     "vue-router": "^3.0.1",
+    "vue-social-sharing": "^2.3.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
