test PWA Android login

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -44,7 +44,7 @@
     }
   ],
   "start_url": "/",
-  "display": "browser",
+  "display": "standalone",
   "background_color": "#FFFFFF",
   "theme_color": "#ec6730"
 }
