--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hellojs": "^1.17.1",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
+    "vue-colcade": "^1.0.0",
     "vue-hellojs": "^0.0.4",
     "vue-router": "^3.0.1",
     "vue-social-sharing": "^2.3.3",
