--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "vue-hellojs": "^0.0.4",
     "vue-router": "^3.0.1",
     "vue-social-sharing": "^2.3.3",
-    "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.5.4"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.5",
