--- a/public/manifest.json
+++ b/public/manifest.json
@@ -43,7 +43,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/",
+  "start_url": "/flux",
   "display": "standalone",
   "background_color": "#FFFFFF",
   "theme_color": "#ec6730"
