--- a/public/manifest.json
+++ b/public/manifest.json
@@ -43,7 +43,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/flux",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#FFFFFF",
   "theme_color": "#ec6730"
